test/lit/pto/tstore_verify_shape_valid_mismatch_invalid.pto
// RUN: ptoas %s 2>&1 | FileCheck %s

module {
  func.func @tstore_shape_valid_mismatch_invalid(
      %part : !pto.partition_tensor_view<64x64xf32>) {
    %tile = pto.alloc_tile
      : !pto.tile_buf<loc=vec, dtype=f32, rows=64, cols=64, v_row=32, v_col=32, blayout=row_major, slayout=none_box, fractal=512, pad=0>

    pto.tstore ins(%tile : !pto.tile_buf<loc=vec, dtype=f32, rows=64, cols=64, v_row=32, v_col=32, blayout=row_major, slayout=none_box, fractal=512, pad=0>)
              outs(%part : !pto.partition_tensor_view<64x64xf32>)
    return
  }
}

// CHECK: error: 'pto.tstore' op expects dst static element count
